--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 Recordá que nosotros estamos a tu completa disposición y queremos darte la mejor calidad de servicio posible para que puedas llevar a cabo tus tareas laborales, ver streaming, estudiar desde casa o simplemente distraerte con tus redes sociales.
                 Venimos a servirte a vos y por eso nos interesa tu opinión en todo momento. Somos <span class="negrita">Villafañe Wifi</span> y sos nuestra prioridad.
             </p>
+            <p>hola</p>
         </div>
         <section class="section-image">
             <img src="imagenes-proyecto/torre1.webp" alt="hombre escalando una antena" class="image">
