segunda entrega del proyecto final

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="div-logo">
                 <a href="index.html"><img src="icon/favicon/favicon.ico" alt="logo de la empresa" class="logo"></a>
             </div>
-            <span class="menu-listas">
+            <div class="menu-listas">
                 <ul class="list-nav">
                     <li class="list"><a href="index.html">Inicio</a></li>
                     <li class="list"><a href="html/nosotros.html">Nosotros</a></li>
@@ -23,7 +23,7 @@
                     <li class="list"><a href="html/info.html">Información</a></li>
                     <li class="list"><a href="html/preguntas.html">Preguntas</a></li>
                 </ul>
-            </span>
+            </div>
         </nav>
     </header>
     <main class="principal">
