--- a/html/preguntas.html
+++ b/html/preguntas.html
@@ -55,8 +55,8 @@
             </div>
             <div class="preguntas1">
                 <form action="">
-                <label for="pregunta">Si tenés otra consulta, no dudes en escribirnos</label>
-                <textarea name="pregunta" id="pregunta" cols="30" rows="10"></textarea>
+                <label for="pregunta" class="pregunta">Si tenés otra consulta, no dudes en escribirnos</label>
+                <textarea name="pregunta" id="pregunta" cols="30" rows="10" class="textarea1"></textarea>
                 <input type="reset" class="boton">
                 <input type="submit" class="boton">
                 </form>
