--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    />
+    <link
+    href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    rel="stylesheet"
+    />
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Libre+Franklin&family=Playfair+Display&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/inicio.css">
     <link rel="icon" href="icon/logovw.ico">
