--- a/html/info.html
+++ b/html/info.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Somos proveedores de Internet en sectores urbanos y rurales, utilizando tecnología inalámbrica de última generación, nuestra infraestructura de red nos permite alcanzar aquellos lugares donde es difícil llegar.">
+<meta name="keywords" content="Wifi, Internet, Villafañe, villafañewifi, Formosa, argentina Villafañe WIFI, Villafañe-wifi, Mayor Villafañe, Misión Laishi, KM 142, pirane">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Edu+SA+Beginner:wght@500&family=Roboto+Condensed&display=swap" rel="stylesheet">
