--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Somos proveedores de Internet en sectores urbanos y rurales, utilizando tecnología inalámbrica de última generación, nuestra infraestructura de red nos permite alcanzar aquellos lugares donde es difícil llegar.">
+<meta name="keywords" content="Wifi, Internet, Villafañe, villafañewifi, Formosa, argentina Villafañe WIFI, Villafañe-wifi, Mayor Villafañe, Misión Laishi, KM 142, pirane">
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
