--- a/index.html
+++ b/index.html
@@ -52,7 +52,23 @@
         </section>
     </main>
     <footer class="pie">
-        <p>Encontranos en nuestro <a href="https://instagram.com" target="_blank" class="pie__text">Instagram</a></p>
+        <section class="social">
+            <p>¡Seguinos en nuestras redes!</p>
+            <div class="links">
+                <a href="https://www.facebook.com" target="_blank">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+                <a href="https://youtube.com" target="_blank">
+                    <i class="fab fa-youtube"></i>
+                </a>
+                <a href="https://instagram.com" target="_blank">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="https://vm.tiktok.com" target="_blank">
+                    <i class="fab fa-tiktok"></i>
+                </a>
+            </div>
+        </section>
     </footer>
 </body>
 </html>
