--- a/html/contacto.html
+++ b/html/contacto.html
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Somos proveedores de Internet en sectores urbanos y rurales, utilizando tecnología inalámbrica de última generación, nuestra infraestructura de red nos permite alcanzar aquellos lugares donde es difícil llegar.">
-<meta name="keywords" content="Wifi, Internet, Villafañe, villafañewifi, Formosa, argentina Villafañe WIFI, Villafañe-wifi, Mayor Villafañe, Misión Laishi, KM 142, pirane">
+    <meta name="keywords" content="Wifi, Internet, Villafañe, villafañewifi, Formosa, argentina Villafañe WIFI, Villafañe-wifi, Mayor Villafañe, Misión Laishi, KM 142, pirane">
     <link rel="stylesheet" href="../css/inicio.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    />
+    <link
+    href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    rel="stylesheet"
+    />
     <link rel="icon" href="../icon/logovw.ico">
     <title>Contacto</title>
 </head>
@@ -73,7 +81,23 @@
         </form>
     </main>
     <footer class="pie">
-        <p>Encontranos en nuestro <a href="https://instagram.com" target="_blank" class="pie__text">Instagram</a></p>
+        <section class="social">
+            <p>¡Seguinos en nuestras redes!</p>
+            <div class="links">
+                <a href="https://www.facebook.com" target="_blank">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+                <a href="https://youtube.com" target="_blank">
+                    <i class="fab fa-youtube"></i>
+                </a>
+                <a href="https://instagram.com" target="_blank">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="https://vm.tiktok.com" target="_blank">
+                    <i class="fab fa-tiktok"></i>
+                </a>
+            </div>
+        </section>
     </footer>
 </body>
 </html>
