--- a/html/info.html
+++ b/html/info.html
@@ -35,9 +35,9 @@
             </span>
         </nav>
     </header>
-    <main class="principal">
+    <main class="principal ">
         <h1 class="titlec">Más Información</h1>
-        <div class="parrafo">
+        <div class="parrafo principal2">
             <p class="parrafo__text">Hemos notado que muchas personas se quedan con algunas dudas respecto a nuestros sercivio. Queremos brindarte la mayor información posible sobre todo.
             A continuacion te dejamos unas imágenes con nuestros precios.
             </p>
