--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -35,9 +35,9 @@
             </span>
         </nav>
     </header>
-    <main class="principal">
+    <main class="principal ">
         <h1 class="titlec">¿Quiénes Somos?</h1>
-        <div class="parrafo">
+        <div class="parrafo principal2">
             <p class="parrafo__nos">Villafañe Wifi es una empresa que empezó como un proyecto para un grupo pequeño de personas pero con el tiempo fuimos creciendo de una manera desmedida que nos vimos obligados a abrir nuestras puertas para que todo el mundo tenga acceso a nuestro servicio y de nuestra mano llegar al maravilloso mundo de <b>internet</b>.
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus optio vitae soluta laborum praesentium exercitationem repellendus hic. Excepturi totam libero est doloremque qui ullam mollitia, suscipit eveniet culpa fugit neque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet sed fugiat dolorum neque! Labore fugiat maxime ea quae vitae fugit a atque? Dolore eos fugiat consectetur veniam possimus facilis sunt?
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque suscipit culpa voluptates sunt, similique ad cum totam repellat nesciunt sequi ut. Numquam tempore illum officia assumenda. Iusto temporibus reiciendis placeat.
