--- a/index.html
+++ b/index.html
@@ -36,20 +36,22 @@
             </div>
         </nav>
     </header>
-    <main class="principal">
+    <main class="container1">
         <div class="div_title">
             <h1 class="titlep"><span id="villa">Villafañe</span> Wifi</h1>
         </div>
-        <div class="parrafo">
-            <p class="parrafo__text">
-                Con el imponente avance de la tecnología y la rápida evolución de los dispositivos nos vimos obligados a cubrir tus necesidades, por tan importante motivo hemos creado nuestra empresa de servicio de internet.
-                Recordá que nosotros estamos a tu completa disposición y queremos darte la mejor calidad de servicio posible para que puedas llevar a cabo tus tareas laborales, ver streaming, estudiar desde casa o simplemente distraerte con tus redes sociales.
-                Venimos a servirte a vos y por eso nos interesa tu opinión en todo momento. Somos <span class="negrita">Villafañe Wifi</span> y sos nuestra prioridad.
-            </p>
+        <div class="principal">
+            <div class="parrafo principal2">
+                <p class="parrafo__text">
+                    Con el imponente avance de la tecnología y la rápida evolución de los dispositivos nos vimos obligados a cubrir tus necesidades, por tan importante motivo hemos creado nuestra empresa de servicio de internet.
+                    Recordá que nosotros estamos a tu completa disposición y queremos darte la mejor calidad de servicio posible para que puedas llevar a cabo tus tareas laborales, ver streaming, estudiar desde casa o simplemente distraerte con tus redes sociales.
+                    Venimos a servirte a vos y por eso nos interesa tu opinión en todo momento. Somos <span class="negrita">Villafañe Wifi</span> y sos nuestra prioridad.
+                </p>
+                <section class="section-image">
+                    <img src="imagenes-proyecto/torre1.webp" alt="hombre escalando una antena" class="image">
+                </section>
+            </div>
         </div>
-        <section class="section-image">
-            <img src="imagenes-proyecto/torre1.webp" alt="hombre escalando una antena" class="image">
-        </section>
     </main>
     <footer class="pie">
         <section class="social">
