--- a/html/contacto.html
+++ b/html/contacto.html
@@ -35,9 +35,9 @@
             </span>
         </nav>
     </header>
-    <main class="principal">
+    <main class="principal ">
         <h1 class="titlec">Contactanos</h1>
-        <div class="parrafo">
+        <div class="parrafo principal2">
             <p class="parrafo__text">Te dejamos el siguiente formulario de contacto para que podamos con vos de manera sencilla y rápida.</p>
         </div>
             <form class="formulario">
