--- a/html/preguntas.html
+++ b/html/preguntas.html
@@ -35,9 +35,9 @@
             </span>
         </nav>
     </header>
-    <main class="principal">
+    <main class="principal ">
         <h1 class="titlec">Preguntas Frecuentes</h1>
-        <div class="parrafo">
+        <div class="parrafo principal2">
             <p class="parrafo__text">También queremos que despejes tus dudas y para eso te dejamos una pequeña lista con las preguntas frecuentes que nos hacen la mayoría de los usuarios.</p>
             <div class="preguntas">
                 <h2 class="preguntas__title">¿Cuántos dispositivos puedo conectar?</h2>
