--- a/html/contacto.html
+++ b/html/contacto.html
@@ -35,50 +35,55 @@
             </span>
         </nav>
     </header>
-    <main class="principal ">
-        <h1 class="titlec">Contactanos</h1>
-        <div class="parrafo principal2">
-            <p class="parrafo__text">Te dejamos el siguiente formulario de contacto para que podamos con vos de manera sencilla y rápida.</p>
+    <main class="container1">
+        <div class="div-title">
+            <h1 class="titlec">Contactanos</h1>
         </div>
-            <form class="formulario">
-                    <div class="seccion_form">
-                        <label for="nombre">Nombre</label>
-                        <input type="text" name="nombre" class="input" required>
-                    </div>
-                    <div class="seccion_form">
-                        <label for="apellido">Apellido</label>
-                    <input type="text" name="apellido" class="input" required>
-                    </div>
-                    <div class="seccion_form">
-                    <label for="telefono">Tel</label>
-                    <input type="number" name="telefono" class="input" required>
-                    </div>
-                    <div class="seccion_form">
-                        <label for="direccion">Dirección</label>
-                        <input type="text" name="direccion" class="input" required>
-                    </div>
-                    <div class="seccion_form">
-                        <label for="megas">Megas Disponibles</label>
-                        <select name="megas" id="megas">
-                            <option value="4">4 Megas</option>
-                            <option value="6">6 Megas</option>
-                            <option value="8">8 Megas</option>
-                            <option value="10">10 Megas</option>
-                        </select>
-                    </div>
-                    <div class="seccion_form">
-                        <label for="sugerencia">Si necesitas un plan de megas especial dejanos en el siguiente recuadro de sugerencias</label> <br>
-                    </div>
-                    <div class="seccion_form">
-                    </div>
-                    <div class="seccion_form textarea">
-                        <textarea name="sugerencia" id="sugerencia" cols="30" rows="10"></textarea>
-                    </div>
-                    <div class="submit_button">
-                        <input type="submit" class="boton">
-                    </div>
-                </fieldset>
-        </form>
+        <div class="principal">
+            <div class="parrafo principal2">
+                <p class="parrafo__text">Te dejamos el siguiente formulario de contacto para que podamos con vos de manera sencilla y rápida.</p>
+                <div>
+                    <form class="formulario">
+                        <div class="seccion_form">
+                            <label for="nombre">Nombre</label>
+                            <input type="text" name="nombre" class="input" required>
+                        </div>
+                        <div class="seccion_form">
+                            <label for="apellido">Apellido</label>
+                            <input type="text" name="apellido" class="input" required>
+                        </div>
+                        <div class="seccion_form">
+                            <label for="telefono">Tel</label>
+                            <input type="number" name="telefono" class="input" required>
+                        </div>
+                        <div class="seccion_form">
+                            <label for="direccion">Dirección</label>
+                            <input type="text" name="direccion" class="input" required>
+                        </div>
+                        <div class="seccion_form">
+                            <label for="megas">Megas Disponibles</label>
+                            <select name="megas" id="megas">
+                                <option value="4">4 Megas</option>
+                                <option value="6">6 Megas</option>
+                                <option value="8">8 Megas</option>
+                                <option value="10">10 Megas</option>
+                            </select>
+                        </div>
+                        <div class="seccion_form">
+                            <label for="sugerencia">Si necesitas un plan de megas especial dejanos en el siguiente recuadro de sugerencias</label> <br>
+                        </div>
+                        <div class="seccion_form">
+                        </div>
+                        <div class="seccion_form textarea">
+                            <textarea name="sugerencia" id="sugerencia" cols="30" rows="10"></textarea>
+                        </div>
+                        <div class="submit_button">
+                            <input type="submit" class="boton">
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </main>
     <footer class="pie">
         <section class="social">
