ultimas modificaciones del proyecto general

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -41,7 +41,9 @@
         </div>
         <div class="principal">
             <div class="parrafo principal2">
-                <p class="parrafo__text">Te dejamos el siguiente formulario de contacto para que podamos con vos de manera sencilla y rápida.</p>
+                <p class="parrafo__text">
+                    Te dejamos el siguiente formulario de contacto para que podamos con vos de manera sencilla y rápida.
+                </p>
                 <div>
                     <form class="formulario">
                         <div class="seccion_form">
@@ -69,8 +71,8 @@
                                 <option value="10">10 Megas</option>
                             </select>
                         </div>
-                        <div class="seccion_form">
-                            <label for="sugerencia">Si necesitas un plan de megas especial dejanos en el siguiente recuadro de sugerencias</label> <br>
+                        <div class="seccion_form seccionlabel">
+                            <label for="sugerencia" class="sl">Si necesitas un plan de megas especial dejanos en el siguiente recuadro de sugerencias</label> <br>
                         </div>
                         <div class="seccion_form">
                         </div>
