--- a/html/info.html
+++ b/html/info.html
@@ -35,29 +35,33 @@
             </span>
         </nav>
     </header>
-    <main class="principal ">
-        <h1 class="titlec">Más Información</h1>
-        <div class="parrafo principal2">
-            <p class="parrafo__text">Hemos notado que muchas personas se quedan con algunas dudas respecto a nuestros sercivio. Queremos brindarte la mayor información posible sobre todo.
-            A continuacion te dejamos unas imágenes con nuestros precios.
-            </p>
+    <main class="container1">
+        <div class="div-title">
+            <h1 class="titlec titlei">Más Información</h1>
         </div>
-        <div class="abonos">
-            <div class="planes">
-                <p class="planes__num">4</p>
-                <p class="planes__text">Megas</p>
-            </div>
-            <div class="planes">
-                <p class="planes__num">6</p>
-                <p class="planes__text">Megas</p>
-            </div>
-            <div class="planes">
-                <p class="planes__num">8</p>
-                <p class="planes__text">Megas</p>
-            </div>
-            <div class="planes">
-                <p class="planes__num">10</p>
-                <p class="planes__text">Megas</p>
+        <div class="principal">
+            <div class="parrafo principal2">
+                <p class="parrafo__text">Hemos notado que muchas personas se quedan con algunas dudas respecto a nuestros sercivio. Queremos brindarte la mayor información posible sobre todo.
+                A continuacion te dejamos unas imágenes con nuestros planes.
+                </p>
+                <div class="abonos">
+                    <div class="planes">
+                        <p class="planes__num">4</p>
+                        <p class="planes__text">Megas</p>
+                    </div>
+                    <div class="planes">
+                        <p class="planes__num">6</p>
+                        <p class="planes__text">Megas</p>
+                    </div>
+                    <div class="planes">
+                        <p class="planes__num">8</p>
+                        <p class="planes__text">Megas</p>
+                    </div>
+                    <div class="planes">
+                        <p class="planes__num">10</p>
+                        <p class="planes__text">Megas</p>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
