--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -35,13 +35,28 @@
             </span>
         </nav>
     </header>
-    <main class="principal ">
-        <h1 class="titlec">¿Quiénes Somos?</h1>
-        <div class="parrafo principal2">
-            <p class="parrafo__nos">Villafañe Wifi es una empresa que empezó como un proyecto para un grupo pequeño de personas pero con el tiempo fuimos creciendo de una manera desmedida que nos vimos obligados a abrir nuestras puertas para que todo el mundo tenga acceso a nuestro servicio y de nuestra mano llegar al maravilloso mundo de <b>internet</b>.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus optio vitae soluta laborum praesentium exercitationem repellendus hic. Excepturi totam libero est doloremque qui ullam mollitia, suscipit eveniet culpa fugit neque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet sed fugiat dolorum neque! Labore fugiat maxime ea quae vitae fugit a atque? Dolore eos fugiat consectetur veniam possimus facilis sunt?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque suscipit culpa voluptates sunt, similique ad cum totam repellat nesciunt sequi ut. Numquam tempore illum officia assumenda. Iusto temporibus reiciendis placeat.
-            </p>
+    <main class="container1">
+        <div class="div-title">
+            <h1 class="titlec titlen">¿Quiénes Somos?</h1>
+        </div>
+        <div class="principal">
+            <div class="parrafo principal2">
+                <p class="parrafo__nos">
+                    Villafañe Wifi es una empresa que empezó como un proyecto para un grupo pequeño de personas pero con el tiempo fuimos creciendo de una manera 
+                    desmedida que nos vimos obligados a abrir nuestras puertas para que todo el mundo tenga acceso a nuestro servicio y de esa manera llegar al 
+                    maravilloso mundo de <b>internet</b>.
+                </p>
+                <h2 class="titleh2">Villafañe Wifi Hoy</h2>
+                <p class="parrafo__nos">
+                    Somos un pequeño equipo conformado por 5 personas donde todos aportamos todos los conocimientos y experiencias para poder desarrollar nuestra
+                    labor de la mejor manera posible. Estamos pendiente del servicio en todo momento, ya que nuestra tarea demanda una atención constante, en gran 
+                    medida somos quienes somos por todo el trabajo que aporta el equipo desde atras, haciendo todo lo posible para que el usuario tenga la mejor experciencia
+                    en cuanto al uso del servicio. <br>
+                    Consideramos que el tabajo en equipo es fundamental para el correcto desarrollo de cualquier proyecto, por eso estamos en contacto con los técnicos,
+                    atención al cliente y con el gerente general para poder coordinar las salidas tanto de instalaciones, soportes técnicos o simplemente mantenimiento 
+                    del servicio en el domicilio del usuario.
+                </p>
+            </div>
         </div>
     </main>
     <footer class="pie">
