--- a/html/preguntas.html
+++ b/html/preguntas.html
@@ -35,42 +35,46 @@
             </span>
         </nav>
     </header>
-    <main class="principal ">
-        <h1 class="titlec">Preguntas Frecuentes</h1>
-        <div class="parrafo principal2">
-            <p class="parrafo__text">También queremos que despejes tus dudas y para eso te dejamos una pequeña lista con las preguntas frecuentes que nos hacen la mayoría de los usuarios.</p>
-            <div class="preguntas">
-                <h2 class="preguntas__title">¿Cuántos dispositivos puedo conectar?</h2>
-                <p class="preguntas__parrafo">La cantidad de disposivos es opcional, dependiendo de tu router y del ancho de banda contratado. Por ejemplo, si contas con el servicio de 4 megas, podés conectar los dispositivos que quieras pero el rendimiento no va a ser igual que contratando 10 megas.</p>
-            </div>
-            <div class="preguntas">
-                <h2 class="preguntas__title">¿En qué puedo utilizar el servicio?</h2>
-                <p class="preguntas__parrafo">El uso de internet es inmenso, podés utilizarlo en todo lo que quieras, ya sean redes sociales, multimedia, trabajo, operaciones bancarios, etc.</p>
-            </div>
-            <div class="preguntas">
-                <h2 class="preguntas__title">¿Por qué cuando recién instalé el servicio funcionaba mejor?</h2>
-                <p class="preguntas__parrafo">El incoveniente que nos encontramos generalmente al visitar el domicilio del usuario es la cantidad de conectados a la vez, muchas veces ese es el problema principal.</p>
-            </div>
-            <div class="preguntas">
-                <h2 class="preguntas__title">¿Qué hacer cuando el servicio no funciona correctamente?</h2>
-                <p class="preguntas__parrafo">Si notas que el servicio no funciona de manera correcta podes cortar el suministro de energía del cpe y el router para hacer que los dispositivos se reinicien. Si notas que el problema continúa podes contactarte con nosotros para organizar una visita técnica a tu domicilio.</p>
-            </div>
-            <div class="preguntas">
-                <h2 class="preguntas__title">¿Cuánto tiempo tengo para pagar el servicio?</h2>
-                <p class="preguntas__parrafo">Para abonar el servicio tenes desde el primer día del mes hasta el día diez del mismo. Si por algún motivo particular no podés hacerlo en ese plazo de tiempo, debés contactarnos para informar el retraso y evitar la suspención.</p>
-            </div>
-            <div class="preguntas">
-                <h2 class="preguntas__title">¿Si noto que el servicio no me alcanza lo puedo aumentar?</h2>
-                <p class="preguntas__parrafo">Te permitimos aumentar el ancho de banda contratado en cualquier momento que quieras. Recordá que abonas el servicio una vez que lo consumís (lo utilizas y después lo pagas).</p>
-            </div>
-            <div class="preguntas1">
-                <form action="">
-                <label for="pregunta" class="pregunta">Si tenés otra consulta, no dudes en escribirnos</label>
-                <textarea name="pregunta" id="pregunta" cols="30" rows="10" class="textarea1"></textarea>
-                <input type="reset" class="boton">
-                <input type="submit" class="boton">
-                </form>
-            </div>  
+    <main class="container1">
+        <div class="div-title">
+            <h1 class="titlec titlepr">Preguntas Frecuentes</h1>
+        </div>
+        <div class="principal">
+            <div class="parrafo principal2">
+                <p class="parrafo__text">También queremos que despejes tus dudas y para eso te dejamos una pequeña lista con las preguntas frecuentes que nos hacen la mayoría de los usuarios.</p>
+                <div class="preguntas">
+                    <h2 class="preguntas__title">¿Cuántos dispositivos puedo conectar?</h2>
+                    <p class="preguntas__parrafo">La cantidad de disposivos es opcional, dependiendo de tu router y del ancho de banda contratado. Por ejemplo, si contas con el servicio de 4 megas, podés conectar los dispositivos que quieras pero el rendimiento no va a ser igual que contratando 10 megas.</p>
+                </div>
+                <div class="preguntas">
+                    <h2 class="preguntas__title">¿En qué puedo utilizar el servicio?</h2>
+                    <p class="preguntas__parrafo">El uso de internet es inmenso, podés utilizarlo en todo lo que quieras, ya sean redes sociales, multimedia, trabajo, operaciones bancarios, etc.</p>
+                </div>
+                <div class="preguntas">
+                    <h2 class="preguntas__title">¿Por qué cuando recién instalé el servicio funcionaba mejor?</h2>
+                    <p class="preguntas__parrafo">El incoveniente que nos encontramos generalmente al visitar el domicilio del usuario es la cantidad de conectados a la vez, muchas veces ese es el problema principal.</p>
+                </div>
+                <div class="preguntas">
+                    <h2 class="preguntas__title">¿Qué hacer cuando el servicio no funciona correctamente?</h2>
+                    <p class="preguntas__parrafo">Si notas que el servicio no funciona de manera correcta podes cortar el suministro de energía del cpe y el router para hacer que los dispositivos se reinicien. Si notas que el problema continúa podes contactarte con nosotros para organizar una visita técnica a tu domicilio.</p>
+                </div>
+                <div class="preguntas">
+                    <h2 class="preguntas__title">¿Cuánto tiempo tengo para pagar el servicio?</h2>
+                    <p class="preguntas__parrafo">Para abonar el servicio tenes desde el primer día del mes hasta el día diez del mismo. Si por algún motivo particular no podés hacerlo en ese plazo de tiempo, debés contactarnos para informar el retraso y evitar la suspención.</p>
+                </div>
+                <div class="preguntas">
+                    <h2 class="preguntas__title">¿Si noto que el servicio no me alcanza lo puedo aumentar?</h2>
+                    <p class="preguntas__parrafo">Te permitimos aumentar el ancho de banda contratado en cualquier momento que quieras. Recordá que abonas el servicio una vez que lo consumís (lo utilizas y después lo pagas).</p>
+                </div>
+                <div class="preguntas1">
+                    <form action="">
+                    <label for="pregunta" class="pregunta">Si tenés otra consulta, no dudes en escribirnos</label>
+                    <textarea name="pregunta" id="pregunta" cols="30" rows="10" class="textarea1"></textarea>
+                    <input type="reset" class="boton">
+                    <input type="submit" class="boton">
+                    </form>
+                </div>  
+        </div>
     </main>
     <footer class="pie">
         <section class="social">
