--- a/html/contacto.html
+++ b/html/contacto.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Somos proveedores de Internet en sectores urbanos y rurales, utilizando tecnología inalámbrica de última generación, nuestra infraestructura de red nos permite alcanzar aquellos lugares donde es difícil llegar.">
     <meta name="keywords" content="Wifi, Internet, Villafañe, villafañewifi, Formosa, argentina Villafañe WIFI, Villafañe-wifi, Mayor Villafañe, Misión Laishi, KM 142, pirane">
+        <!-- CSS only -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    
     <link rel="stylesheet" href="../css/inicio.css">
     <link
     rel="stylesheet"
@@ -18,21 +21,34 @@
     <link rel="icon" href="../icon/logovw.ico">
     <title>Contacto</title>
 </head>
-<body class="container">
+<body class="container-fluid  container2">
     <header class="header">
-        <nav class="cabecera">
-            <div class="div-logo">
-                <a href="../index.html"><img src="../icon/favicon/favicon.ico" alt="logo de la empresa" class="logo"></a>
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html"><img src="../icon/favicon/favicon.ico" alt="logo de la empresa" class="logo"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
             </div>
-            <span class="menu-listas">
-                <ul class="list-nav">
-                <li class="list"><a href="../index.html">Inicio</a></li>
-                <li class="list"><a href="nosotros.html">Nosotros</a></li>
-                <li class="list"><a href="contacto.html">Contacto</a></li>
-                <li class="list"><a href="info.html">Información</a></li>
-                <li class="list"><a href="preguntas.html">Preguntas</a></li>
-                </ul>
-            </span>
+                <div class="collapse navbar-collapse" id="navbarScroll">
+                <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="nosotros.html">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contacto.html">Contacto</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="info.html">Información</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="preguntas.html">Preguntas</a>
+                    </li>
+                </div>
+            </div>
         </nav>
     </header>
     <main class="container1">
@@ -106,5 +122,7 @@
             </div>
         </section>
     </footer>
+        <!-- JavaScript Bundle with Popper -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
