--- a/html/contacto.html
+++ b/html/contacto.html
@@ -23,7 +23,7 @@
 </head>
 <body class="container-fluid  container2">
     <header class="header">
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html"><img src="../icon/favicon/favicon.ico" alt="logo de la empresa" class="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
