--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -21,7 +21,7 @@
     <link rel="icon" href="../icon/logovw.ico">
     <title>Nosotros</title>
 </head>
-<body class="container-fluid  container2">
+<body class="container-flui  container2">
     <header class="header">
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
